flask-deployment-without-configMap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pas-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: flask
  template:
    metadata:
      labels:
        component: flask
    spec:
      containers:
        - name: flask
          image:  'vntoutsias/pas-image'
          ports:
            - containerPort: 5000
