postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: db-data
      containers:
        - name: postgres
          image: "postgres"
         - name: "POSTGRES_USER"
           valueFrom:
             configMapKeyRef:
               key: "POSTGRES_USER"
               name: "postgres-config"
         - name: "POSTGRES_PASSWORD"
           valueFrom:
             configMapKeyRef:
               key: "POSTGRES_PASSWORD"
               name: postgres-config
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
