flask-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: pas-clip
spec:
  type: ClusterIP
  selector:
    component: flask
  ports:
    - port: 5000
      targetPort: 5000
