postgres-clip.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgres-clip
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
